--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.1.2-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Piotr Ozarowski <ozarow@gmail.com>  Thu,  1 Feb 2007 12:15:20 +0100
+
 mako (0.1.1-1) unstable; urgency=low
 
   * Initial release (closes: #405576)
