--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mako (0.1.3-1) unstable; urgency=low
+
+  * New upstream release
+  * Added python-pylons to Enhances:
+
+ -- Piotr Ozarowski <ozarow@gmail.com>  Wed, 21 Feb 2007 01:41:09 +0100
+
 mako (0.1.2-1) unstable; urgency=low
 
   * New upstream release
