--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.1.4-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Piotr Ozarowski <ozarow@gmail.com>  Sat, 10 Mar 2007 19:02:06 +0100
+
 mako (0.1.3-1) unstable; urgency=low
 
   * New upstream release
