--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mako (0.1.5-1) unstable; urgency=low
+
+  * New upstream release
+  * Changed my address to piotr@debian.org
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sun, 01 Apr 2007 00:04:28 +0200
+
 mako (0.1.4-1) unstable; urgency=low
 
   * New upstream release
