new upstream release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.1.7-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Piotr Ożarowski <piotr@debian.org>  Wed, 13 Jun 2007 15:07:59 +0200
+
 mako (0.1.6-1) unstable; urgency=low
 
   * New upstream release
