--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.1.8-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Piotr Ożarowski <piotr@debian.org>  Tue, 26 Jun 2007 15:39:18 +0200
+
 mako (0.1.7-1) unstable; urgency=low
 
   * New upstream release
