--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.1.8-2) UNRELEASED; urgency=low
+
+  * Homepage field added
+
+ -- Piotr Ożarowski <piotr@debian.org>  Fri, 21 Sep 2007 21:44:30 +0200
+
 mako (0.1.8-1) unstable; urgency=low
 
   * New upstream release
