--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.1.9-2) UNRELEASED; urgency=low
+
+  * Rename XS-Vcs-* fields to Vcs-* (dpkg supports them now)
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sat,  6 Oct 2007 23:46:38 +0200
+
 mako (0.1.9-1) unstable; urgency=low
 
   * New upstream release
