--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-mako (0.1.9-2) UNRELEASED; urgency=low
+mako (0.1.10-1) unstable; urgency=low
 
+  * New upstream release
   * Rename XS-Vcs-* fields to Vcs-* (dpkg supports them now)
+  * Bump Standards-Version to 3.7.3 (no changes needed)
 
- -- Piotr Ożarowski <piotr@debian.org>  Sat,  6 Oct 2007 23:46:38 +0200
+ -- Piotr Ożarowski <piotr@debian.org>  Thu, 27 Dec 2007 11:36:10 +0100
 
 mako (0.1.9-1) unstable; urgency=low
 
