--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,18 @@
-mako (0.2.2-2) UNRELEASED; urgency=low
+mako (0.2.3-1) experimental; urgency=low
 
-  * debian/control
-    - switch Vcs-Browser field to viewsvn
+  [ Sandro Tosi ]
+  * Switch Vcs-Browser field to viewsvn
 
- -- Sandro Tosi <morph@debian.org>  Mon, 03 Nov 2008 22:13:31 +0100
+  [ Piotr Ożarowski ]
+  * New upstream release (upload to experimental due to Lenny freeze, to ease
+    testing rev. dependencies)
+    + python-beaker's recommended version bumped to >= 1.1
+  * Let python-central do the Egg renaming part
+    + python-central required build version bumped to 0.6.1
+    + debian/rules updated
+  * Compress binary package with bzip2
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sun, 23 Nov 2008 18:28:03 +0100
 
 mako (0.2.2-1) unstable; urgency=low
 
