--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+mako (0.2.5-1) unstable; urgency=low
+
+  * New upstream release
+  * debian/copyright file updated
+  * Switch to python-support
+    - debian/preinst file added (to remove python-central files)
+  * Standards-Version bumped to 3.8.0 (no changes needed)
+
+ -- Piotr Ożarowski <piotr@debian.org>  Mon, 07 Sep 2009 23:29:57 +0200
+
 mako (0.2.4-2) unstable; urgency=low
 
   * Set the minimum required Python version to 2.4 (closes: #515096)
