--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,19 @@
+mako (0.2.5-2) unstable; urgency=low
+
+  * Add --prefix=/usr to setup.py's install command (fixes FTBFS bug with
+    python2.6)
+  * Remove requires.txt from Python's Egg metadata (dpkg handles dependencies
+    way better, closes LP: #461281)
+
+ -- Piotr Ożarowski <piotr@debian.org>  Mon, 26 Oct 2009 22:20:13 +0100
+
 mako (0.2.5-1) unstable; urgency=low
 
   * New upstream release
   * debian/copyright file updated
   * Switch to python-support
     - debian/preinst file added (to remove python-central files)
-  * Standards-Version bumped to 3.8.0 (no changes needed)
+  * Standards-Version bumped to 3.8.3 (no changes needed)
 
  -- Piotr Ożarowski <piotr@debian.org>  Mon, 07 Sep 2009 23:29:57 +0200
 
