--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+mako (0.2.5-2) unstable; urgency=low
+
+  * Add --prefix=/usr to setup.py's install command (fixes FTBFS bug with
+    python2.6)
+  * Remove requires.txt from Python's Egg metadata (dpkg handles dependencies
+    way better, closes LP: #461281)
+
+ -- Piotr Ożarowski <piotr@debian.org>  Mon, 26 Oct 2009 22:20:13 +0100
+
 mako (0.2.5-1) unstable; urgency=low
 
   * New upstream release
