--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.2.5-3) UNRELEASED; urgency=low
+
+  * Move python-beaker from Recommends to Suggests (closes: #569986)
+
+ -- Piotr Ożarowski <piotr@debian.org>  Mon, 15 Feb 2010 19:53:42 +0100
+
 mako (0.2.5-2) unstable; urgency=low
 
   * Add --prefix=/usr to setup.py's install command (fixes FTBFS bug with
