--- a/debian/install
+++ b/debian/install
@@ -1,2 +1,3 @@
 debian/mako.vim		/usr/share/vim/addons/syntax/
+debian/mako_indent.vim	/usr/share/vim/addons/indent/
 debian/mako.yaml	/usr/share/vim/registry
