--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.3.1-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sun, 07 Mar 2010 19:56:38 +0100
+
 mako (0.3.0-1) unstable; urgency=low
 
   * New upstream release
@@ -6,7 +12,7 @@ mako (0.3.0-1) unstable; urgency=low
     Use `vim-addons install mako` to enable it
   * Standards-Version bumped to 3.8.4 (no changes needed)
 
- -- Piotr Ożarowski <piotr@debian.org>  Mon, 15 Feb 2010 19:53:42 +0100
+ -- Piotr Ożarowski <piotr@debian.org>  Sat, 06 Mar 2010 14:01:41 +0100
 
 mako (0.2.5-2) unstable; urgency=low
 
