--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.3.2-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Piotr Ożarowski <piotr@debian.org>  Thu, 18 Mar 2010 21:59:27 +0100
+
 mako (0.3.1-1) unstable; urgency=low
 
   * New upstream release
