--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.3.3-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Piotr Ożarowski <piotr@debian.org>  Tue, 01 Jun 2010 18:14:20 +0200
+
 mako (0.3.2-1) unstable; urgency=low
 
   * New upstream release
