--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mako (0.3.4-1) UNRELEASED; urgency=low
+
+  * New upstream release
+  * Add python-markupsafe to Depends
+
+ -- Piotr Ożarowski <piotr@debian.org>  Wed, 23 Jun 2010 19:47:18 +0200
+
 mako (0.3.3-1) unstable; urgency=low
 
   * New upstream release
