--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-mako (0.3.4-1) UNRELEASED; urgency=low
+mako (0.3.4-1) unstable; urgency=low
 
   * New upstream release
-  * Add python-markupsafe to Depends
+  * Add python-markupsafe to Recommends
 
- -- Piotr Ożarowski <piotr@debian.org>  Wed, 23 Jun 2010 19:47:18 +0200
+ -- Piotr Ożarowski <piotr@debian.org>  Thu, 24 Jun 2010 09:56:48 +0200
 
 mako (0.3.3-1) unstable; urgency=low
 
