--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mako (0.3.5-1) unstable; urgency=low
+
+  * New upstream release
+  * Standards-Version bumped to 3.9.1 (no changes needed)
+
+ -- Piotr Ożarowski <piotr@debian.org>  Wed, 20 Oct 2010 23:48:56 +0200
+
 mako (0.3.4-5) unstable; urgency=low
 
   * Upload to unstable 
