--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-mako (0.3.6-2) UNRELEASED; urgency=low
+mako (0.4.0-1) unstable; urgency=low
 
+  * New upstream release
   * debian/rules: fix DEB_BUILD_OPTIONS=nocheck builds (closes: 613855)
 
- -- Piotr Ożarowski <piotr@debian.org>  Fri, 18 Feb 2011 23:27:57 +0100
+ -- Piotr Ożarowski <piotr@debian.org>  Tue, 22 Feb 2011 21:25:15 +0100
 
 mako (0.3.6-1) unstable; urgency=low
 
