--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.4.1-2) unstable; urgency=low
+
+  * Rebuild to add Python 2.7 and drop Python 2.5 support
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sat, 16 Apr 2011 13:00:25 +0200
+
 mako (0.4.1-1) unstable; urgency=low
 
   * New upstream release
