--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.6.1-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sun, 29 Jan 2012 16:02:55 +0100
+
 mako (0.6.0-1) unstable; urgency=low
 
   * New upstream release
