--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
-mako (0.7.2-1) UNRELEASED; urgency=low
+mako (0.7.3-1) experimental; urgency=low
 
   * New upstream release
-  Not uploading yet, fix doesn't affect Debian
 
- -- Piotr Ożarowski <piotr@debian.org>  Sun, 22 Jul 2012 00:38:56 +0200
+ -- Piotr Ożarowski <piotr@debian.org>  Mon, 12 Nov 2012 00:03:25 +0100
 
 mako (0.7.1-1) experimental; urgency=low
 
