--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+mako (0.7.0-1.1) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * Fix "missing Breaks+Replaces: python3-mako (<< 0.3.6-1)":
+    add them for python-mako-doc.
+    (Closes: #694330)
+
+ -- gregor herrmann <gregoa@debian.org>  Fri, 07 Dec 2012 16:44:44 +0100
+
 mako (0.7.0-1) unstable; urgency=low
 
   * New upstream release
