--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-mako (0.8.0-2) UNRELEASED; urgency=low
+mako (0.8.0-2) unstable; urgency=low
 
+  [ Jakub Wilk ]
   * Use canonical URIs for Vcs-* fields.
 
- -- Jakub Wilk <jwilk@debian.org>  Sun, 05 May 2013 16:01:12 +0200
+  [ Piotr Ożarowski ]
+  * Standards-Version bumped to 3.9.4 (no changes needed)
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sun, 05 May 2013 21:28:00 +0200
 
 mako (0.8.0-1) experimental; urgency=low
 
