--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.8.1-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sat, 25 May 2013 22:58:26 +0200
+
 mako (0.8.0-2) unstable; urgency=low
 
   [ Jakub Wilk ]
