--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (0.9.0-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sat, 31 Aug 2013 11:58:59 +0200
+
 mako (0.8.1-1) unstable; urgency=low
 
   * New upstream release
