--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mako (0.9.1-1) unstable; urgency=low
+
+  * New upstream release
+  * Standards-Version bumped to 3.9.5 (no changes needed)
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sun, 29 Dec 2013 11:57:23 +0100
+
 mako (0.9.0-1) unstable; urgency=low
 
   * New upstream release
