* Convert debian/copyright to DEP-5 and use it to remove minified JS files * Add dh-python to Build-Depends * Standards-Version bumped to 3.9.6 (no changes needed) * Remove minified javascript files from upstream source. They are not used   in the build process. Closes: #722265 * include Non-maintainer upload in debian/changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,24 @@
-mako (1.0.1-1) UNRELEASED; urgency=medium
+mako (1.0.1+ds1-1) unstable; urgency=medium
 
-  * Team upload.
+  [ Barry Warsaw ]
   * New upstream release.
-  * debian/control: 
-    - Add python3-funcsigs to Build-Depends-Indep.
   * debian/patches/python35-compat.patch: Upstream provided patch to
     fix compatibility issues with Python 3.5.
 
- -- Barry Warsaw <barry@debian.org>  Tue, 25 Aug 2015 16:23:14 -0400
+  [ Piotr Ożarowski ]
+  * Convert debian/copyright to DEP-5 and use it to remove minified JS files
+  * Add dh-python to Build-Depends
+  * Standards-Version bumped to 3.9.6 (no changes needed)
+
+ -- Piotr Ożarowski <piotr@debian.org>  Wed, 26 Aug 2015 17:24:08 +0200
+
+mako (1.0.0+dfsg-0.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Remove minified javascript files from upstream source. They are not used
+    in the build process. Closes: #722265
+
+ -- Ivo De Decker <ivodd@debian.org>  Tue, 11 Nov 2014 12:39:18 +0100
 
 mako (1.0.0-1) unstable; urgency=medium
 
