--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+0.2.2
+- cached blocks now use the current context when rendering
+an expired section, instead of the original context
+passed in [ticket:87]
+- fixed a critical issue regarding caching, whereby 
+a cached block would raise an error when called within a
+cache-refresh operation that was initiated after the 
+initiating template had completed rendering.
+
 0.2.1
 - fixed bug where 'output_encoding' parameter would prevent 
 render_unicode() from returning a unicode object.
