--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (1.0.3+ds1-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Piotr Ożarowski <piotr@debian.org>  Sat, 31 Oct 2015 23:27:16 +0100
+
 mako (1.0.2+ds1-1) unstable; urgency=medium
 
   * New upstream release.
