--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (1.0.3+ds1-2) UNRELEASED; urgency=medium
+
+  * Fixed VCS URL (https)
+
+ -- Ondřej Nový <novy@ondrej.org>  Tue, 29 Mar 2016 21:42:26 +0200
+
 mako (1.0.3+ds1-1) unstable; urgency=medium
 
   * New upstream release.
