--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mako (1.0.6+ds1-2) unstable; urgency=medium
+
+  * Update tests for Pygments 2.2 (closes: 852908, thanks to Gilles Filippini
+    for the patch) 
+
+ -- Piotr Ożarowski <piotr@debian.org>  Tue, 07 Feb 2017 22:23:36 +0100
+
 mako (1.0.6+ds1-1) unstable; urgency=medium
 
   * New upstream release
