--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (1.0.6+ds1-2-multiarch) unstable; urgency=medium
+
+  * Specify Multi-Arch: foreign.
+
+ -- You-Sheng Yang <vicamo@gmail.com>  Tue, 21 Mar 2017 15:55:10 +0800
+
 mako (1.0.6+ds1-2) unstable; urgency=medium
 
   * Update tests for Pygments 2.2 (closes: 852908, thanks to Gilles Filippini
