--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mako (1.0.7+ds1-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Piotr Ożarowski <piotr@debian.org>  Fri, 14 Jul 2017 16:44:18 +0200
+
 mako (1.0.6+ds1-2) unstable; urgency=medium
 
   * Update tests for Pygments 2.2 (closes: 852908, thanks to Gilles Filippini
