--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 mako (1.0.7+ds1-1) unstable; urgency=medium
 
   * New upstream release
+  * Standards-Version bumped to 4.0.0 (no changes needed)
 
  -- Piotr Ożarowski <piotr@debian.org>  Fri, 14 Jul 2017 16:44:18 +0200
 
